--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "java.project.sourcePaths": [
-        "java",
-        "demo/src/main/java/slurpmail"
-    ]
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
